--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,11 +6,14 @@
 #    By: potero <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/02/17 16:19:00 by potero            #+#    #+#              #
-#    Updated: 2022/03/01 12:22:24 by potero-d         ###   ########.fr        #
+#    Updated: 2022/03/02 09:53:06 by potero-d         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS = main.c utils.c ph_data.c ph_thread.c ph_time.c ph_routine.c
+SRCS = src/main.c src/utils.c src/ph_data.c src/ph_thread.c\
+	   src/ph_time.c src/ph_routine.c
+
+INCS = inc/
 
 OBJS = $(SRCS:.c=.o)
 
@@ -21,12 +24,12 @@ CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 
 %.o:%.c
-		$(CC) $(CFLAGS) -c  $< -o $(<:.c=.o)
+		$(CC) $(CFLAGS) -c  $< -o $(<:.c=.o) -I$(INCS)
 
 RM = rm -f
 
 $(NAME): $(OBJS)
-		$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
+		$(CC) $(CFLAGS) $(OBJS) -I$(INCS) -o $(NAME) -lpthread
 
 all: $(NAME)
 
